nova_tests/negative_capability/folder_file_conflict_setup/admin/users.nv
// Plan 42.08 Ф.1 + Ф.2: peer того же конфликтующего admin/.
// Создаёт ambiguity: folder-module `admin` + single-file `admin.nv`.

module folder_file_conflict_setup.admin

export fn user_count() -> int =>
    42
